--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,3 +5,4 @@
 @import "shared";
 @import "form";
 @import "layout";
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Karla:ital,wght@0,800;1,600&display=swap');
