ログイン案内をhomeページに追加

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -12,7 +12,8 @@
       | リマインドも設定可能！
   = link_to new_user_registration_path, class: 'btn user-create-btn'
     | アカウントを作成して始める
-
+  = link_to new_user_session_path
+    | ログインはこちら
 
   .home-icon-items
     i class="fas fa-user-clock fa-3x"
