--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -1,7 +1,7 @@
 .link-items
   - if controller_name != 'sessions'
     .link-item
-      = link_to 'ログインページはこちら', new_session_path(resource_name)
+      = link_to 'ログインはこちら', new_session_path(resource_name)
   - if devise_mapping.registerable? && controller_name != 'registrations'
     .link-item
       = link_to 'アカウント登録はこちら', new_registration_path(resource_name)
