--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -107,7 +107,11 @@ ul#error_explanation{
   }
 
   .app-name{
-    font-size: 20px;
+    font-size: 22px;
+  }
+
+  .nav-items{
+    display: flex;
   }
 
   .nav-item{
