homeページの文言を修正

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -3,7 +3,7 @@
     | Resupple
   section.text-position-center
     p.home-description-sentence
-      | サプリを毎日定量摂取している人向けの残量とリマインドを管理するサービスです。
+      | サプリを毎日定量摂取している人向けの残量とリマインドを管理するサービス！
     p.home-description-sentence
       | サプリの内容量と1日あたりの摂取量を設定するだけで残量を毎日自動更新！
     p.home-description-sentence
