;抜けを修正

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -28,6 +28,10 @@ ul#error_explanation{
   list-style-position: inside;
 }
 
+.main-items{
+  margin: 0 10px;
+}
+
 .error-word{
   font-size: 12px;
 }
@@ -74,7 +78,7 @@ ul#error_explanation{
 }
 
 .doc-headline{
-  margin-top: 10px
+  margin-top: 10px;
 }
 
 .doc-desc{
@@ -87,7 +91,7 @@ ul#error_explanation{
 }
 
 .back-link{
-  margin-top: 20px
+  margin-top: 20px;
 }
 
 @media (min-width: 768px) {
@@ -100,10 +104,6 @@ ul#error_explanation{
 @media (max-width: 767.98px) {
   header{
     height: 40px;
-  }
-
-  .main-items{
-    margin: 0 10px;
   }
 
   .app-name{
