--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,6 +1,6 @@
+.page-title
+  | プロフィール編集
 .main-items
-  .page-title
-    h3 プロフィール編集
   .form-items
     = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
       = render "devise/shared/error_messages", resource: resource
