--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,6 +1,6 @@
+.page-title
+  | アカウント登録
 .main-items
-  .page-title
-    h3 アカウント登録
   .form-items
     = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
       = render "devise/shared/error_messages", resource: resource
