--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -77,6 +77,13 @@ ul#error_explanation{
   margin: 0 10px;
 }
 
+.copyright-item{
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
 .doc-headline{
   margin-top: 10px;
 }
