--- a/app/assets/stylesheets/supplements/index.scss
+++ b/app/assets/stylesheets/supplements/index.scss
@@ -1,40 +1,47 @@
+.welcome-content{
+  margin: 50px 0;
+  padding: 20px 0;
+  border: 1px solid #1E90FF;
+  border-radius: 5px;
+}
+
+.welcome-title{
+  font-size: 20px;
+}
+
+.welcome-sentence,
+.empty-sentence,{
+  font-size: 18px;
+  margin-top: 16px;
+}
+
+.supplements-empty{
+  margin: 50px 0;
+  padding: 20px;
+  border: 3px dashed #1E90FF;
+  border-radius: 10px;
+}
+
 .supplements-list{
-  width: 90%;
-  margin: 20px auto;
+  width: 100%;
+  margin: 30px auto;
   border: 1px solid #555;
 }
 
 .supplement-item{
-  border-bottom: 1px solid #AAA;
+  border-bottom: 1px solid #CCC;
 }
 
 .supplement-item:last-child{
   border-bottom: none;
 }
 
-.welcome-content{
-  margin: 50px 0;
-  background: #FFF;
-  padding: 20px 5px;
-  border: 1px solid #FFFF00;
-  border-radius: 5px;
-  text-align: center;
+.supplement-name{
+  font-size: 25px;
 }
 
-.supplements-empty{
-  margin: 50px  30px;
-  padding: 30px;
-  border: 2px dashed #9057FF;
-  border-radius: 10px;
-}
-
-.btn-supplement-add {
-  margin: 20px auto;
-  text-align: center;
-  width: 400px;
-  background: #fff;
-  border: 2px solid #555;
-  border-radius: 30px;
+.supplement-info{
+  font-size: 17.5px;
 }
 
 .supplement-btns{
@@ -44,18 +51,20 @@
 
 .btn-supplement-edit{
   color: #111;
-  flex-basis: 200px;
+  flex-basis: 384px;
   font-size: 18px;
-  height: 40px;
   border: 1px solid #AAA;
 }
 
 .btn-supplement-destroy{
   color: #FF3300;
   font-size: 18px;
-  height: 40px;
   border: 1px solid #AAA;
   margin-left: 20px;
+}
+
+.btn-supplement-destroy:hover{
+  color: #FF3300;
 }
 
 .acd-check{
@@ -63,28 +72,25 @@
 }
 
 .acd-label{
-  height: 65px;
-  background: #fff;
-  color: black;
   display: block;
-  margin-bottom: 1px;
-  padding: 5px 10px;
+  padding: 10px;
+  margin-bottom: 0;
   position: relative;
 }
 
 .acd-label:after{
-  color: #4169E1;
-  background: #FFF;
   box-sizing: border-box;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   content: '\f107';
+  color: #1E90FF;
   font-family: "Font Awesome 5 Free";
   font-size: 40px;
   font-weight: 900;
-  text-align: center;
   height: 100%;
-  width: 75px;
+  width: 85px;
   right: 0;
   top: 0px;
   border-left: 1px solid #DDD;
@@ -103,54 +109,63 @@
 }
 
 .acd-check:checked + .acd-label + .acd-content{
-  height: 160px;
+  height: 150px;
   opacity: 1;
   padding: 10px;
   visibility: visible;
 }
 
+.btn-supplement-add {
+  color: #FFF;
+  background: #1E90FF;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  width: 384px;
+  margin: 20px auto;
+  border-radius: 5px;
+}
+
+.btn-supplement-add:hover {
+  color: #FFF;
+}
+
 @media (max-width: 767.98px) {
-  .welcome-content{
-    margin: 50px 0;
-    background: #FFF;
-    padding: 20px 5px;
-    border: 1px solid #FFFF00;
-    border-radius: 5px;
-    text-align: start;
+  .welcome-title{
+    font-size: 18px;
   }
 
-  .btn-supplement-add {
-    margin: 30px auto;
-    text-align: center;
-    width: 200px;
-    background-color: #fff;
-    border: 2px solid #555;
-    border-radius: 30px;
+  .welcome-sentence{
+    font-size: 16px;
+  }
+
+  .supplement-name{
+    font-size: 20px;
+  }
+
+  .supplement-info{
+    font-size: 14px;
   }
 
   .btn-supplement-edit{
-    color: #111;
-    flex-basis: 50%;
-    font-size: 18px;
-    height: 40px;
-    border: 1px solid #AAA;
+    flex-basis: 70%;
+    font-size: 16px;
+  }
+
+  .btn-supplement-destroy{
+    flex-basis: 30%;
+    font-size: 16px;
+    margin-left: 10px;
   }
 
   .acd-label:after{
-    color: #4169E1;
-    background: #FFF;
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    content: '\f107';
-    font-family: "Font Awesome 5 Free";
-    font-size: 40px;
-    font-weight: 900;
-    text-align: center;
-    height: 100%;
-    width: 20%;
-    right: 0;
-    top: 0px;
-    border-left: 1px solid #DDD;
+    width: 70px;
+  }
+
+  .btn-supplement-add{
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0 auto;
+    width: 100%;
   }
 }
