アカウントedit画面のデザイン修正

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -35,5 +35,9 @@
   margin: 20px 0;
   color: red;
   background-color: #FFF;
-  border: 1px solid #888;
+  border: 1px solid #999;
+}
+
+.destroy-btn:hover{
+  color: red;
 }
