--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -37,13 +37,13 @@
 .update-btn,
 .send-mail-btn{
   background: #fabd17;
-  font-size: 20px;
+  border: 1px solid #efb61b;
+  font-size: 18px;
   font-weight: 600;
   letter-spacing: 2px;
 }
 
 .cansel-btn{
-  background: #FFF;
   font-weight: 600;
   letter-spacing: 2px;
   border: 1px solid #BBB;
@@ -60,5 +60,10 @@
 
   .form-btn{
     width: 100%;
+  }
+
+  .update-btn,
+  .send-mail-btn{
+    font-size: 16px;
   }
 }
