--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -112,6 +112,10 @@ ul#error_explanation{
     height: 40px;
   }
 
+  .main-items{
+    margin-bottom: 30px;
+  }
+
   .app-name{
     font-size: 22px;
   }
