--- a/app/views/supplements/edit.html.slim
+++ b/app/views/supplements/edit.html.slim
@@ -1,4 +1,4 @@
+.page-title
+  | サプリメント編集
 .main-items
-  .page-title
-    h4 サプリメント編集
   = render partial: 'form', locals: { supplement: @supplement }
