--- a/app/views/supplements/new.html.slim
+++ b/app/views/supplements/new.html.slim
@@ -1,4 +1,4 @@
+.page-title
+  | サプリメント追加
 .main-items
-  .page-title
-    h4 サプリメント追加
   = render partial: 'form', locals: { supplement: @supplement }
