--- a/app/assets/stylesheets/supplements/index.scss
+++ b/app/assets/stylesheets/supplements/index.scss
@@ -122,7 +122,8 @@
   font-weight: 600;
   text-align: center;
   width: 384px;
-  margin: 20px auto;
+  margin: 30px auto;
+  border: 1px solid #0d73d6;
   border-radius: 5px;
 }
 
@@ -163,9 +164,7 @@
   }
 
   .btn-supplement-add{
-    font-size: 20px;
     font-weight: 400;
-    margin: 0 auto;
     width: 100%;
   }
 }
