--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -16,7 +16,7 @@
     | ログインはこちら
 
   .home-icon-items
+    i class="fas fa-list-ol fa-3x"
     i class="fas fa-user-clock fa-3x"
     i class="far fa-envelope fa-3x"
-    i class="far fa-paper-plane fa-3x"
     i class="far fa-smile fa-3x"
