--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -7,4 +7,4 @@
       = link_to 'アカウント登録はこちら', new_registration_path(resource_name)
   - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
     .link-item
-      = link_to 'パスワードを忘れた場合', new_password_path(resource_name)
+      = link_to 'パスワードをお忘れの方', new_password_path(resource_name)
