--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,8 +5,8 @@ html
       | RemainingSupplements
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'application', media: 'all'
+    = javascript_pack_tag 'application'
     = favicon_link_tag('favicon.ico')
     meta name="description" content="サプリの残りはどれくらいなのか？といった問題をRemaining supplementsは簡単登録で解決します。 サプリを定量摂取している人のサプリ管理アプリです。"
     meta content="width=device-width,initial-scale=1" name="viewport"
