アプリ名変更に伴い当該箇所修正

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,13 +2,13 @@ doctype html
 html
   head
     title
-      | RemainingSupplements
+      | Resupple
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_pack_tag 'application'
     = favicon_link_tag('favicon.ico')
-    meta name="description" content="サプリの残りはどれくらいなのか？といった問題をRemaining supplementsは簡単登録で解決します。 サプリを定量摂取している人のサプリ管理アプリです。"
+    meta name="description" content="サプリの残りはどれくらいなのか？といった問題をResuppleは簡単登録で解決します。 サプリを定量摂取している人のサプリ管理アプリです。"
     meta content="width=device-width,initial-scale=1" name="viewport"
     script src="https://kit.fontawesome.com/aa99e80b9b.js" crossorigin="anonymous"
   body
