--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,10 +1,11 @@
 footer
-  .footer-items
-    .footer-item
-      = link_to tos_path
+  .footer-lows
+    .footer-low
+      = link_to tos_path, class: 'footer-text'
         | 利用規約
-    .footer-item
-      = link_to policy_path
+    .footer-low
+      = link_to policy_path, class: 'footer-text'
         | プライバシーポリシー
-  .copyright-item
-    | ©️  2021 gallardo16
+  .footer-lows
+    .copyright-item
+      | ©️  2021 gallardo16
