--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,9 +1,10 @@
-.link-items{
-  margin: 50px 0;
+.link-items,
+.under-link-item{
+  margin: 48px 0;
 }
 
 .link-item{
-  margin-top: 10px;
+  margin-top: 24px;
 }
 
 .danger-items{
@@ -13,26 +14,26 @@
 }
 
 .danger-title{
-  font-size: 18px;
+  font-size: 20px;
   color: #FFF;
   background-color: red;
   border-radius: 5px 5px 0 0;
-  padding: 5px 10px;
+  padding: 8px;
 }
 
 .destroy-items{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 10px;
+  margin: 16px;
 }
 
 .destroy-desc{
-  padding-right: 20px;
+  padding-right: 16px;
 }
 
 .destroy-btn{
-  margin: 20px 0;
+  margin: 16px 0;
   color: red;
   background-color: #FFF;
   border: 1px solid #999;
