--- a/app/assets/stylesheets/supplements/index.scss
+++ b/app/assets/stylesheets/supplements/index.scss
@@ -60,7 +60,7 @@
   font-size: 40px;
   font-weight: 900;
   height: 100%;
-  width: 80px;
+  width: 85px;
   right: 0;
   top: 0px;
   border-left: 1px solid #DDD;
@@ -68,7 +68,7 @@
 
 .acd-content{
   display: flex;
-  align-items: center;
+  flex-direction: column;
   border-top: 1px dashed #AAA;
   height: 0;
   opacity: 0;
@@ -80,7 +80,7 @@
 }
 
 .acd-check:checked + .acd-label + .acd-content{
-  height: 160px;
+  height: 200px;
   opacity: 1;
   visibility: visible;
 }
@@ -88,56 +88,90 @@
 .item-rows{
   flex-basis: 654px;
   padding: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-bottom: 1px solid #CCC;
 }
 
 .supplement-btns{
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
-  padding-top: 16px;
+  align-items: center;
+  padding: 16px 0;
 }
+
+.btn-supplement-edit-item{
+  display: flex;
+  justify-content: center;
+  padding: 0 16px;
+}
+
+.btn-supplement-destroy-item{
+  flex-basis: 85px;
+  display: flex;
+  justify-content: center;
+}
+
 
 .btn-supplement-edit{
   color: #111;
-  flex-basis: 50%;
+  width: 368px;
   border: 1px solid #AAA;
 }
 
+.btn-supplement-edit:hover{
+  color: #111;
+  background: #EEE;
+}
+
+
 .btn-supplement-destroy{
-  color: #888;
+  color: red;
+  border: 1px solid red;
 }
 
 .btn-supplement-destroy:hover{
-  color: red;
+  color: #FFF;
+  background: red;
 }
 
 .btn-position-add{
   position: fixed;
   right: 0;
   bottom: 0;
-  text-align: center;
+  z-index: 10;
+  margin: 32px;
 }
 
 .btn-supplement-add{
-  font-size: 14px;
-  font-weight: 400;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
   color: #FFF;
   background: #d819c7;
-  width: 80px;
-  height: 80px;
-  margin: 16px;
+  width: 120px;
+  height: 120px;
   border: 1px solid #c73cbb;
-  border-radius: 50px;
+  border-radius: 50%;
 }
 
 .add-btn-items{
   display: flex;
   flex-direction: column;
+  padding-bottom: 12px;
 }
 
 .btn-supplement-add:hover {
-  color: #FFF;
+  color: #d819c7;
+  background: #FFF;
+}
+
+@media (min-width: 768px) {
+  .btn-supplement-edit-item{
+    flex-basis: 650px;
+  }
 }
 
 @media (max-width: 767.98px) {
@@ -151,6 +185,10 @@
 
   .acd-label{
     padding: 8px;
+  }
+
+  .acd-check:checked + .acd-label + .acd-content{
+    height: 160px;
   }
 
   .item-rows{
@@ -167,9 +205,19 @@
     font-size: 14px;
   }
 
+  .btn-supplement-edit-item{
+    padding: 0 8px;
+  }
+
+  .btn-supplement-destroy-item{
+    flex-basis: 64px;
+    display: flex;
+    justify-content: center;
+  }
+
   .btn-supplement-edit{
-    flex-basis: 50%;
     font-size: 14px;
+    width: 160px;
   }
 
   .btn-supplement-destroy{
@@ -181,24 +229,12 @@
   }
 
   .btn-position-add{
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    text-align: center;
+    margin: 16px;
   }
 
   .btn-supplement-add{
     font-size: 14px;
-    font-weight: 400;
-    text-align: center;
     width: 80px;
     height: 80px;
-    margin: 16px;
-    border-radius: 50px;
-  }
-
-  .add-btn-items{
-    display: flex;
-    flex-direction: column;
   }
 }
