真ん中寄せのためのclassを共通化

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,7 +1,7 @@
 .main-items
-  .top-title.text-position-center
+  .top-title.is-centered
     | Resupple
-  section.text-position-center
+  section.is-centered
     p.home-description-sentence
       | サプリを毎日定量摂取している人向けの残量とリマインドを管理するサービス！
     p.home-description-sentence
